# isound

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  compose.yml
.github/workflows/: docker-image.yml
migrations/2024-05-29-154947_create_users/: up.sql
src/: main.rs  tools.rs  users.rs  videos.rs
