[package]
name = "isoud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6"
actix-files = "0.6"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

